test/parser-iec-61131-3-2/grammar.js
        source_file: $ => repeat(
            choice($.library_element_name, $.library_element_declaration)
        ),

        // COMMENTS
        // extras
        library_element_declaration: $ => choice(
            $.data_type_declaration,
            $.function_declaration,
            $.function_block_declaration,
            $.program_declaration,
            $.configuration_declaration
        ),

        // B.1.2 Constants

        elementary_type_name: $ => choice(
            $.numeric_type_name,
            $.date_type_name,
            $.bit_string_type_name,
            'STRING', 'WSTRING', 'TIME'
        ),

        numeric_type_name: $ => choice($.integer_type_name, $.real_type_name),

        real_type_name: $ => choice("REAL", "LREAL"),

        derived_function_name: $ => $.identifier,

        function_declaration: $ => seq(
            "FUNCTION", $.derived_function_name, ":",
            choice($.elementary_type_name, $.derived_type_name),
            repeat(choice($.function_var_decls, $.io_var_declarations)),
            optional($.function_body),
            "END_FUNCTION"
        ),

        derived_function_block_name: $ => $.identifier,

        function_block_declaration: $ => seq(
            "FUNCTION_BLOCK", $.derived_function_block_name,
            repeat(choice($.io_var_declarations, $.other_var_declarations)),
            $.function_block_body,
            "END_FUNCTION_BLOCK"
        ),

        identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

        // Improve error recovery for missing punctuation:
