packages/parser-iec-61131-3-2/test/corpus/type_declaration/functions/function.txt
==================
Function declaration
==================

FUNCTION AverageVal : REAL

END_FUNCTION 

---

    (source_file
      (library_element_declaration
        (function_declaration
          (derived_function_name
            (identifier))
          (elementary_type_name
            (numeric_type_name
              (real_type_name))))))  
