test/parser-iec-61131-3-2/test/corpus/type_declaration/functions/function_block.txt
==================
Function Block declaration
==================

FUNCTION_BLOCK AverageVal

END_FUNCTION_BLOCK 

---

    (source_file
      (library_element_declaration
        (function_block_declaration
          (derived_function_block_name
            (identifier)))))